# soothsayer

./: README.rst  config.ini  pyproject.toml
soothsayer/: config.py  main.py  prediction.py  utils.py
tests/: test_config.py  test_file_utils.py  test_prediction.py  test_soothsayer.py
