[tool.poetry]
name = "soothsayer"
version = "0.1.0"
description = "A simple microservice to run flair sentiment analysis"
authors = ["mehmet <mehmetccm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flair = "^0.11.3"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
start = "soothsayer.main:start"
 
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
